[gd_scene load_steps=13 format=1]

[ext_resource path="res://pillbox/Pillbox.gd" type="Script" id=1]
[ext_resource path="res://pillbox/pillbox_body.png" type="Texture" id=2]
[ext_resource path="res://pillbox/pillbox_meter_bg.png" type="Texture" id=3]
[ext_resource path="res://pillbox/pillbox_meter_progress.png" type="Texture" id=4]
[ext_resource path="res://Tank/l1_layer_1.png" type="Texture" id=5]
[ext_resource path="res://Tank/tank_turret_lights.png" type="Texture" id=6]
[ext_resource path="res://Weapon.tscn" type="PackedScene" id=7]
[ext_resource path="res://sound/ac_fire.wav" type="Sample" id=8]
[ext_resource path="res://sound/ac_fire_heavy.smp" type="Sample" id=9]

[sub_resource type="CircleShape2D" id=7]

custom_solver_bias = 0.0
radius = 26.0768

[sub_resource type="CircleShape2D" id=8]

custom_solver_bias = 0.0
radius = 512.0

[sub_resource type="SampleLibrary" id=6]

samples/ac_fire = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }
samples/ac_fire_heavy = { "db":0.0, "pitch":1.0, "sample":ExtResource( 9 ) }

[node name="Pillbox" type="StaticBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )
team = 1

[node name="Body" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Body"]

texture = ExtResource( 3 )

[node name="ArmorMeter" type="TextureProgress" parent="."]

visibility/blend_mode = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -32.0
margin/top = -32.0
margin/right = 32.0
margin/bottom = 32.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 60.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 4 )
mode = 4
radial_fill/initial_angle = 225.0
radial_fill/fill_degrees = 270.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Turret" type="Sprite" parent="."]

texture = ExtResource( 5 )

[node name="Lights" type="Sprite" parent="Turret"]

visibility/visible = false
visibility/blend_mode = 1
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="Detector" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]

shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="TriggerTime" type="Timer" parent="."]

process_mode = 0
wait_time = 1.0
one_shot = false
autostart = false

[node name="Weapon" parent="." instance=ExtResource( 7 )]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

transform/pos = Vector2( 3.8147e-06, 3.8147e-06 )
transform/scale = Vector2( 12.8, 12.8 )
rect = Rect2( -10, -10, 20, 20 )
enabler/pause_animations = true
enabler/freeze_bodies = true
enabler/pause_particles = true
enabler/pause_animated_sprites = true
enabler/process_parent = false
enabler/fixed_process_parent = true

[node name="SfxGuns" type="SamplePlayer2D" parent="."]

params/volume_db = 50.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 1300.0
params/attenuation/distance_exp = 2.14355
config/polyphony = 16
config/samples = SubResource( 6 )
config/pitch_random = 0.02

[connection signal="body_enter" from="Detector" to="." method="_on_Detector_body_enter"]

[connection signal="body_exit" from="Detector" to="." method="_on_Detector_body_exit"]

[connection signal="timeout" from="TriggerTime" to="." method="_on_TriggerTime_timeout"]


